--- a/Code/InitialDataExploration.Rmd
+++ b/Code/InitialDataExploration.Rmd
@@ -11,6 +11,13 @@ editor_options:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+##In this Rmarkdown:
+#Uploading data, plotting DO over time at each sampling site, Analysis Question 1
+#Question 1: Are the DO means equivalent before and after dam removal?
+#This includes taking a subset of DO data to ensure major outliers (-888mgL) are not changing statistical outcomes. Range was set to meet normal range of 0-15
+
+
+
 ```{r Setup and Upload}
 library(tidyverse)
 library(ggridges)
@@ -300,6 +307,13 @@ AvgDO.twosample.wilcox
 
 
 #Graph this!!
+MilburnieDam_AvgDO_Q1boxplot_1<-ggplot(MilburnieDam_AllSitesDO_TimeStamp) +
+geom_boxplot(aes(x = TimeStamp, y = AvgDO), color="skyblue4", alpha=0.75)+
+  xlab("Timeframe in the Dam \nRemoval Process")+
+  ylab("Average Dissolved \nOxygen (mgL)")+
+  mytheme
+MilburnieDam_AvgDO_Q1boxplot_1
+
 MilburnieDam_AvgDO_Q1boxplot<-ggplot(MilburnieDam_AllSitesDO_TimeStamp) +
 geom_boxplot(aes(x = TimeStamp, y = AvgDO), color="skyblue4", alpha=0.75)+
   xlab("Timeframe in the Dam \nRemoval Process")+
@@ -308,18 +322,111 @@ geom_boxplot(aes(x = TimeStamp, y = AvgDO), color="skyblue4", alpha=0.75)+
   ylim(0,15)
   
 ggsave("./Outputs/MilburnieDam_AvgDO_Q1boxplot.jpg", plot=MilburnieDam_AvgDO_Q1boxplot, width =10, height=6, units="in", dpi=300)
+ggsave("./Outputs/MilburnieDam_AvgDO_Q1boxplot_1.jpg", plot=MilburnieDam_AvgDO_Q1boxplot_1, width =10, height=6, units="in", dpi=300)
 
 #summary stats
 tapply(MilburnieDam_AllSitesDO_TimeStamp$AvgDO, MilburnieDam_AllSitesDO_TimeStamp$TimeStamp, summary)
 
 
-#There are a lot of outliers in the Before DO dataset, these include values as low as -888!!!
+#***There are a lot of outliers in the Before DO dataset, these include values as low as -888!!!
 #I should eliminate values below 0 and rerun the test.
 ```
 
+
+
 ```{r Statistical Analysis for Question 1 Eliminating Outliers}
+#Use Timestamp dataset as the latest
+#Take subsets of values of DO in order to rid of negative values. 
+#Subset to use will be 0-15, this takes into account the max value and normal range of values
+
+MilburnieDam_AllSitesDO_TimeStampSUBSET <- subset(MilburnieDam_AllSitesDO_TimeStamp, AvgDO >= 0 & AvgDO  <= 15, 
+select=c(Date:TimeStamp))
+summary(MilburnieDam_AllSitesDO_TimeStampSUBSET)
+
+MilburnieDam_AllSitesDO_BeforeSUBSET <- subset(MilburnieDam_AllSitesDO_Before, AvgDO >= 0 & AvgDO  <= 15, 
+select=c(Date:TimeStamp))
+summary(MilburnieDam_AllSitesDO_BeforeSUBSET)
+
+MilburnieDam_AllSitesDO_AfterSUBSET <- subset(MilburnieDam_AllSitesDO_After, AvgDO >= 0 & AvgDO  <= 15, 
+select=c(Date:TimeStamp))
+summary(MilburnieDam_AllSitesDO_AfterSUBSET)
+
+write.csv(MilburnieDam_AllSitesDO_TimeStampSUBSET, row.names = FALSE, file =("./Processed/MilburnieDam_AllSitesDO_TimeStampSUBSET_processed.csv"))
+write.csv(MilburnieDam_AllSitesDO_BeforeSUBSET, row.names = FALSE, file =("./Processed/MilburnieDam_AllSitesDO_BeforeSUBSET_processed.csv"))
+write.csv(MilburnieDam_AllSitesDO_AfterSUBSET, row.names = FALSE, file =("./Processed/MilburnieDam_AllSitesDO_AfterSUBSET_processed.csv"))
 
 
 
+
+shapiro.test(MilburnieDam_AllSitesDO_TimeStampSUBSET$AvgDO[MilburnieDam_AllSitesDO_TimeStampSUBSET$TimeStamp == "After"])
+#Results: W = 0.96342, p-value < 2.2e-16
+
+shapiro.test(MilburnieDam_AllSitesDO_TimeStampSUBSET$AvgDO[MilburnieDam_AllSitesDO_TimeStampSUBSET$TimeStamp == "Before"])
+#Results:  W = 0.96242, p-value < 2.2e-16
+
+
+var.test(MilburnieDam_AllSitesDO_TimeStampSUBSET$AvgDO ~ MilburnieDam_AllSitesDO_TimeStampSUBSET$TimeStamp)
+#Results
+#F = 1.1581, num df = 1874, denom df = 2678, p-value = 0.0005348
+#alternative hypothesis: true ratio of variances is not equal to 1
+#95 percent confidence interval:
+# 1.065699 1.259395
+#sample estimates:
+#ratio of variances 
+ #         1.158145 
+
+
+vartest_SUBSET<-ggplot(MilburnieDam_AllSitesDO_TimeStampSUBSET, aes(x = AvgDO, color = TimeStamp)) + geom_freqpoly()
+vartest
+
+ AvgDO_SUBSET.twosample <- t.test(MilburnieDam_AllSitesDO_TimeStampSUBSET$AvgDO ~ MilburnieDam_AllSitesDO_TimeStampSUBSET$TimeStamp) 
+AvgDO_SUBSET.twosample
+#Results:
+#t = -15.13, df = 3841.6, p-value < 2.2e-16
+#alternative hypothesis: true difference in means is not equal to 0
+#95 percent confidence interval:
+# -1.390786 -1.071697
+#sample estimates:
+ #mean in group After mean in group Before 
+  #          7.955386             9.186628 
+
+AvgDO_SUBSET.twosample$p.value
+#2.799219e-50
+
+#Format as GLM
+AvgDO_SUBSET.twosample2 <- lm(MilburnieDam_AllSitesDO_TimeStampSUBSET$AvgDO ~ MilburnieDam_AllSitesDO_TimeStampSUBSET$TimeStamp) 
+summary(AvgDO_SUBSET.twosample2)
+plot(AvgDO_SUBSET.twosample2)
+
+
+#Normality is not met Pvalue <0.05
+
+
+#Wilcoxon Test
+AvgDO_SUBSET.twosample.wilcox <- wilcox.test(MilburnieDam_AllSitesDO_TimeStampSUBSET$AvgDO ~ MilburnieDam_AllSitesDO_TimeStampSUBSET$TimeStamp) 
+
+AvgDO_SUBSET.twosample.wilcox
+#Results
+#W = 1889176, p-value < 2.2e-16
+#alternative hypothesis: true location shift is not equal to 0
+
+#Interpretation.... significant difference in Avg daily DO during and after the dam removal(p value<0.0001, Wilcoxon test, W=  1889176)
+
+#Graph this!
+MilburnieDam_AvgDO_SUBSET_Q1boxplot<-ggplot(MilburnieDam_AllSitesDO_TimeStampSUBSET) +
+geom_boxplot(aes(x = TimeStamp, y = AvgDO), color="skyblue4", alpha=0.75)+
+  xlab("Timeframe in the Dam \nRemoval Process")+
+  ylab("Average Dissolved \nOxygen (mgL)")+
+  mytheme
+#+ylim(0,15)
+MilburnieDam_AvgDO_SUBSET_Q1boxplot
+  
+ggsave("./Outputs/MilburnieDam_AvgDO_Q1boxplot.jpg", plot=MilburnieDam_AvgDO_Q1boxplot, width =10, height=6, units="in", dpi=300)
+
+#summary stats
+tapply(MilburnieDam_AllSitesDO_TimeStampSUBSET$AvgDO, MilburnieDam_AllSitesDO_TimeStampSUBSET$TimeStamp, summary)
+
+#Same results but with a different magnitude
+#Same interpretation
 ```
 
